Details
-
Bug
-
Resolution: Fixed
-
Minor
-
0.4.15-dev-2795-g3a822e4 https://git.reactos.org/?p=reactos.git;a=commit;h=3a822e4f74ea6ea8335a8684c5071d264fee4bed
Description
ROS version: 0.4.15-dev-3893-g6cb1e57-x86-gcc
Steps to reproduce the issue:
- Install ReactOS.
- Install OpenOffice or LibreOffice from RAPPS with the option of placing a shortcut on the Desktop
- After the installation, the shortcut icon is not shown
Image:
Trying to change the icon, you will be able to choose the one that should be shown.
The log:
CShellLink.cpp:1705: Unexpected failure (hr)=80070057.
|
CShellLink.cpp:1705: Unexpected failure (hr)=80070057.
|
CShellLink.cpp:1705: Unexpected failure (hr)=80070057.
|
CShellLink.cpp:1705: Unexpected failure (hr)=80070057.
|
(/ntoskrnl/mm/balance.c:145) MM BALANCER: Removing access bit!
|
WARNING: NtUserLockWindowUpdate at /win32ss/user/ntuser/ntstubs.c:914 is UNIMPLEMENTED!
|
travellog.cpp:129: Unexpected failure (hResult)=80004005.
|
CFSDropTarget.cpp:77: Unexpected failure (hr)=80070057.
|
CShellLink.cpp:1705: Unexpected failure (hr)=80070057.
|
It's a regression, previously the shortcuts were created properly:
In fact, starting with a guilty revision, shortcuts are being created broken - even without actual files, broken ones will have no icon at all, while correct shortcuts will have a default program icon (see shortcuts.7z in CORE-18542).
The problem is probably related to the fact that broken shortcuts have double slash in their destination path. The guilty commit implements PathResolveW and PathQualifyA/W functions (see CORE-12665).
Attachments
Issue Links
- blocks
-
CORE-12665 shell32.dll needs PathResolve() implementation
-
- Resolved
-
- is blocked by
-
CORE-18573 IsLFNDriveW("C:\Windows") should return TRUE for LFN drive
-
- Resolved
-
- is duplicated by
-
CORE-18542 Broken shortcuts are created when installing Delphi 7
-
- Resolved
-