[SHELL32_APITEST] Follow-up of 83e690c

Forgotten the section numbers.
CORE-18080